--- a/ccbrowse/www/css/page.scss
+++ b/ccbrowse/www/css/page.scss
@@ -1,5 +1,5 @@
 .page {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
     background-color: #111;
     box-shadow: 0 0 20px rgba(0,0,0,0.5);
@@ -9,20 +9,24 @@
 }
 
 .page h1 {
-    font-size: 32pt;
+    font-size: 2.7rem;
     color: white;
     font-weight: normal;
-    margin-left: 20px;
+    margin: 1.8rem;
     text-align: left;
 }
 
 .page article {
     text-align: left;
     background-color: white;
-    padding: 10px 20px 20px 20px;
     border-radius: 1px;
     box-shadow: inset 0 0 10px rgba(0,0,0,0.15);
     color: #333;
+    padding: 1.2rem;
+}
+
+.page article p {
+    margin: 0.6rem 0;
 }
 
 .page article a {
@@ -30,12 +34,8 @@
     text-decoration: underline;
 }
 
-.page article p {
-    margin: 10px 0;
-}
-
 .page article h2 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-size: 16pt;
+    margin-top: 1.5rem;
+    margin-bottom: 0.9rem;
+    font-size: 1.5rem;
 }
